// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`schema generator works with non-pk autoincrement columns (serial) 1`] = `
"alter table "something" add column "_id" serial;

"
`;

exports[`schema generator works with non-pk autoincrement columns (serial) 2`] = `
"alter table "something" alter column "_id" type int using ("_id"::int);
alter table "something" alter column "_id" drop default;

"
`;

exports[`schema generator works with non-pk autoincrement columns (serial) 3`] = `
"alter table "something" alter column "_id" type int using ("_id"::int);
create sequence if not exists "something__id_seq";
select setval('something__id_seq', (select max("_id") from "something"));
alter table "something" alter column "_id" set default nextval('something__id_seq');

"
`;

exports[`schema generator works with non-pk autoincrement columns (serial) 4`] = `
"alter table "something" drop column "_id";

"
`;

exports[`schema generator works with non-pk autoincrement columns (serial) 5`] = `
"alter table "something" add column "_id" serial;
alter table "something" alter column "id" type varchar(255) using ("id"::varchar(255));
alter table "something" alter column "id" drop default;

"
`;

exports[`schema generator works with non-pk autoincrement columns (serial) 6`] = `
"create table "something" ("id" varchar(255) not null, "_id" serial, "foo" varchar(255) not null, constraint "something_pkey" primary key ("id"));

"
`;
